--- a/style/theme.wxss
+++ b/style/theme.wxss
@@ -20,14 +20,15 @@
 .t-button {
   --td-button-font-weight: 500;
   --td-button-medium-font-size: 32rpx;
-  --td-button-default-color: #fff;
+  --td-button-border-radius: 50rpx;
+  /* --td-button-default-color: #fff;
   --td-button-default-bg-color: #fa4126;
   --td-button-default-border-color: #fa4126;
   --td-button-default-disabled-color: #fff;
   --td-button-default-disabled-bg: #cccccc;
   --td-button-default-disabled-border-color: #cccccc;
   --td-button-default-active-bg-color: #fa4126;
-  --td-button-default-active-border-color: #fa4126;
+  --td-button-default-active-border-color: #fa4126; */
 }
 
 .t-textarea {
@@ -44,4 +45,8 @@
 
 .dialog__button-cancel {
   color: #aeb3b7 !important;
+}
+
+.t-button::after {
+  /* border: 0; */
 }
