--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -33,11 +33,13 @@ page {
 
 .home-page-header .swiper-wrap {
   margin-top: 20rpx;
+  margin-bottom: 20rpx;
 }
 
 .home-page-header .t-image__swiper {
   width: 100%;
-  height: 300rpx;
+  height: 100%;
+  /* height: 300rpx; */
   border-radius: 10rpx;
 }
 
