--- a/pages/gallery/choose-gallery/index.wxss
+++ b/pages/gallery/choose-gallery/index.wxss
@@ -6,7 +6,7 @@
   margin-top: 24rpx;
 }
 
-.styles-page-container .gallery-page-container {
+.gallery-page-container {
   background: #f5f5f5 !important;
   margin-top: 16rpx;
 }
