--- a/pages/gallery/components/creation-card/index.wxss
+++ b/pages/gallery/components/creation-card/index.wxss
@@ -1,39 +1,39 @@
-.task-card {
+.creation-card {
   box-sizing: border-box;
   /* box-sizing: content-box; */
   font-size: 24rpx;
+  border-radius: 0 0 16rpx 16rpx;
   border-bottom: none;
 }
 
-.task-card__main {
-  box-sizing: border-box;
+.creation-card__main {
   position: relative;
   display: flex;
   line-height: 1;
-  padding: 24rpx;
+  padding: 0;
   background: transparent;
-  width: 100%;
+  width: 342rpx;
+  border-radius: 16rpx;
   align-items: center;
   justify-content: center;
   margin-bottom: 16rpx;
-  border-top: 1px solid rgb(211, 211, 211);
-}
-
-.task-card__thumb {
-  flex-shrink: 0;
-  position: relative;
-  width: 160rpx;
-  height: 160rpx;
-  border-radius: 24rpx;
+  flex-direction: column;
   overflow: hidden;
 }
 
-/* .task-card__thumb:empty {
+.creation-card__thumb {
+  flex-shrink: 0;
+  position: relative;
+  width: 100%;
+  height: 340rpx;
+}
+
+.creation-card__thumb:empty {
   display: none;
   margin: 0;
-} */
+}
 
-.task-card__img {
+.creation-card__img {
   display: block;
   width: 100%;
   height: 100%;
@@ -58,33 +58,35 @@
   color: white;
 }
 
-.task-card__body {
-  height: 160rpx;
+.title {
+  position: absolute;
+  bottom: 24rpx;
+  left: 24rpx;
+  right: 24rpx;
+  background: rgba(80, 80, 80, 0.6);
+  color: white;
+  padding: 8rpx 12rpx;
+}
+
+.creation-card__body {
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   flex: 1 1 auto;
   background: #fff;
   border-radius: 0 0 16rpx 16rpx;
-  padding: 16rpx 24rpx;
+  padding: 16rpx 24rpx 18rpx;
   flex-direction: column;
-  justify-content: space-between;
 }
 
-.title {
-  /* position: absolute;
-  bottom: 24rpx;
-  left: 24rpx; */
-  color: #797979;
-  font-size: 32rpx;
-}
-
-.task-card__upper {
+.creation-card__upper {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  flex: 1 1 auto;
 }
 
-.task-card__name {
+.creation-card__name {
   flex-shrink: 0;
   font-size: 28rpx;
   color: #333;
@@ -98,18 +100,18 @@
   line-height: 36rpx;
 }
 
-.task-card__tags {
+.creation-card__tags {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin: 8rpx 0 0 0;
 }
 
-.task-card__tag {
+.creation-card__tag {
   margin: 0 8rpx 8rpx 0;
 }
 
-.task-card__tag-positive {
+.creation-card__tag-positive {
   color: #298a26;
   background: transparent;
   font-size: 20rpx;
@@ -125,7 +127,7 @@
   text-overflow: ellipsis;
 }
 
-.task-card__down {
+.creation-card__down {
   display: flex;
   position: relative;
   flex-direction: row;
@@ -134,5 +136,3 @@
   line-height: 32rpx;
   margin: 8rpx 0 0 0;
 }
-
-
