--- a/pages/gallery/components/task-list/index.wxss
+++ b/pages/gallery/components/task-list/index.wxss
@@ -1,7 +1,7 @@
 .task-list-wrap {
-  display: flex;
+  /* display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: space-between; */
   align-items: stretch;
   padding: 0;
   background: #fff;
