--- a/pages/gallery/index.wxss
+++ b/pages/gallery/index.wxss
@@ -1,5 +1,5 @@
 .gallery-page {
-  padding-bottom: calc(env(safe-area-inset-bottom) + 96rpx);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 110rpx + 130rpx);
 }
 
 .gallery-page-container,
@@ -9,7 +9,46 @@
   margin-top: 24rpx;
 }
 
-.styles-page-container .gallery-page-container {
+.gallery-page-container {
   background: #f5f5f5 !important;
   margin-top: 16rpx;
+}
+
+.jump-button {
+  width: 100%;
+  margin: 24rpx 0;
+}
+
+.gallery-page-bottom {
+  position: fixed;
+  width: 100%;
+  bottom: calc(env(safe-area-inset-bottom) + 110rpx);
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 24rpx;
+  box-sizing: border-box;
+  border-top: 1px solid rgb(219, 219, 219);
+}
+
+.bottom-left {
+  width: 65%;
+}
+
+.gallery-page-bottom .t-button {
+  /* width: 25%; */
+  margin-left: 24rpx;
+  margin-right: 0;
+}
+
+.gallery-page-side {
+  position: fixed;
+  bottom: 400rpx;
+  right: 0;
+  writing-mode: vertical-rl;
+  letter-spacing: 2px;
+  background: grey;
+  color: #fff;
+  padding: 24rpx 12rpx;
+  border-radius: 24rpx 0 0 24rpx;
 }
