--- a/pages/usercenter/index.wxml
+++ b/pages/usercenter/index.wxml
@@ -1,4 +1,8 @@
-<t-user-center-card
+<view style="padding: 200rpx; text-align: center;">
+  coming soon...
+</view>
+
+<!-- <t-user-center-card
   userInfo="{{userInfo}}"
   isPhoneHide="{{true}}"
   name-class="custom-name-class"
@@ -44,4 +48,4 @@
     <view class="popup-close" bind:tap="closeMakePhone">取消</view>
   </view>
 </t-popup>
-<t-toast id="t-toast" />
+<t-toast id="t-toast" /> -->
