fix: 后端 Creation, Task 移除 params 字段（对象），改为 param_list（数组）；前端将引用 params 改为引用 param_list
Changes to be committed:
	modified:   pages/gallery/components/creation-card/index.js
	modified:   pages/gallery/components/creation-card/index.wxml
	modified:   pages/gallery/components/task-card/index.js
	modified:   pages/gallery/preview/index.js
	modified:   pages/gallery/task-detail/index.js

--- a/pages/gallery/components/creation-card/index.wxml
+++ b/pages/gallery/components/creation-card/index.wxml
@@ -21,7 +21,7 @@
     </view>
     <view class="creation-card__body">
       <view class="creation-card__upper">
-        <view wx:if="{{ creation.params }}" class="creation-card__tags">
+        <view wx:if="{{ creation.param_list }}" class="creation-card__tags">
           <t-tag class="creation-card__tag" wx:for="{{ creation.tags }}" wx:key="param" wx:for-item="param"
             variant="light"
             theme="success"
