--- a/pages/gallery/print-preview/index.wxss
+++ b/pages/gallery/print-preview/index.wxss
@@ -72,3 +72,18 @@
   color: #fff;
   width: 240rpx;
 }
+
+.t-popup {
+  width: 600rpx;
+  height: 800rpx;
+}
+
+.t-popup .t-popup__content {
+  width: 100%;
+  height: 100%;
+}
+
+.block {
+  width: 100%;
+  height: 100%;
+}
