--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,6 +1,7 @@
 page {
   box-sizing: border-box;
   padding-bottom: calc(env(safe-area-inset-bottom) + 110rpx);
+  background: #f5f5f5;
 }
 
 .t-tabs.t-tabs--top .t-tabs__scroll {
@@ -107,4 +108,31 @@ page {
   --td-tab-border-color: transparent;
   --td-tab-item-color: #666;
   --td-tab-track-color: red;
+}
+
+.list-wrapper {
+  border-radius: 18rpx;
+  /* background: #fff; */
+  margin-top: 16rpx;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.title-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(to bottom, rgb(255, 218, 197),  #f5f5f5);
+}
+
+.title {
+  font-size: 36rpx;
+  font-weight: bolder;
+  margin: 16rpx 24rpx;
+}
+
+.more-btn {
+  font-size: 28rpx;
+  margin: 16rpx 24rpx;
+  color: rgb(116, 116, 116);
 }
