feat: add product category page; update product detail page;

--- a/pages/product/details/components/buy-bar/index.wxml
+++ b/pages/product/details/components/buy-bar/index.wxml
@@ -8,7 +8,7 @@
         <text wx:if="{{shopCartNum > 0 && item.showCartNum}}" class="tag-cart-num">
           {{shopCartNum > 99 ? '99+' : shopCartNum}}
         </text>
-        <t-icon prefix="wr" name="{{item.iconName}}" size="40rpx" />
+        <t-icon name="{{item.iconName}}" size="40rpx" />
         <view class="operate-text">{{item.title}}</view>
       </view>
     </view>
@@ -16,10 +16,10 @@
   <block wx:if="{{buttonType === 1}}">
     <view class="flex buy-buttons">
       <view class="bar-separately {{soldout || !isStock ? 'bar-addCart-disabled' : ''}}" bindtap="toWorkflow">
-        制作图片
+        生成图片
       </view>
       <view class="bar-buy {{soldout || !isStock ? 'bar-buyNow-disabled' : ''}}" bindtap="toBuyNow">
-        立即打印
+        立即制作
       </view>
     </view>
   </block>
