--- a/components/template/template-card/index.wxml
+++ b/components/template/template-card/index.wxml
@@ -10,7 +10,7 @@
 			  wx:if="{{ !!template.preview_imgs }}"
 			  t-class="template-card__img"
 			  src="{{ template.preview_imgs[0] }}"
-			  mode="aspectFill"
+			  mode="aspectFit"
 			  lazy-load
 			/>
 		</view>
