--- a/components/template/template-card/index.wxss
+++ b/components/template/template-card/index.wxss
@@ -12,8 +12,8 @@
   line-height: 1;
   padding: 0;
   background: transparent;
-  width: 342rpx;
-  border: 1px solid rgb(211, 211, 211);
+  width: 346rpx;
+  /* border: 1px solid rgb(211, 211, 211); */
   border-radius: 16rpx;
   align-items: center;
   justify-content: center;
@@ -25,8 +25,8 @@
 .template-card__thumb {
   flex-shrink: 0;
   position: relative;
-  width: 340rpx;
-  height: 340rpx;
+  width: 344rpx;
+  height: 344rpx;
 }
 
 .template-card__thumb:empty {
@@ -40,6 +40,7 @@
   height: 100%;
   border-radius: 16rpx 16rpx 0 0;
   overflow: hidden;
+  background: rgb(221, 221, 221);
 }
 
 .template-card__body {
