--- a/pages/gallery/index.wxml
+++ b/pages/gallery/index.wxml
@@ -15,7 +15,8 @@
     </view>
   </view> -->
   <view class="gallery-page-container" wx:else>
-    <t-button class="jump-button" theme="danger" bind:tap="jumpChooseClickHandle" wx:if="{{!isChooseImage}}">制作你的专属贴纸</t-button>
+    <t-button class="jump-button" theme="danger" bind:tap="jumpChooseClickHandle" wx:if="{{!isChooseImage}}">定制你的专属产品
+    </t-button>
     <!-- <view class="styles-page-tabs">
       <t-tabs
         t-class="t-tabs"
@@ -53,7 +54,7 @@
       <view>已选{{chooseList.length}}/{{creationList.length}}</view>
     </view>
     <t-button bind:tap="chooseCancelClickHandle">取消</t-button>
-    <t-button theme="danger" bind:tap="printClickHandle" loading="{{printLoading}}">打印</t-button>
+    <t-button theme="danger" bind:tap="printClickHandle" loading="{{printLoading}}">定制</t-button>
   </view>
   <block wx:else>
     <view class="gallery-page-bottom" wx:if="{{notFinishedTaskList.length}}">
@@ -65,4 +66,23 @@
     </view>
     <view class="gallery-page-side" bind:tap="tasksJumpClickHandle" wx:else> 历史队列 </view>
   </block>
+  <t-popup
+    visible="{{popupVisible}}"
+    usingCustomNavbar
+    bind:visible-change="onPopupVisibleChange"
+    placement="bottom">
+    <view class="product-list-popup">
+      <view class="popup-title">选择产品</view>
+      <view style="text-align: center; color: #b9b9b9" wx:if="{{productListLoading}}">
+        <t-loading theme="circular" size="40rpx" text="加载中..." inherit-color />
+      </view>
+      <product-list
+        wx:else
+        wr-class="product-list-container"
+        productList="{{productList}}"
+        preventScrollThrough
+        galleryTab="{{galleryTab}}"
+        bind:click="productListClickHandle" />
+    </view>
+  </t-popup>
 </view>
