feat: recover pages

--- a/pages/usercenter/index.wxml
+++ b/pages/usercenter/index.wxml
@@ -1,8 +1,9 @@
-<view style="padding: 200rpx; text-align: center;">
-  coming soon...
-</view>
+<!-- <view style="padding: 200rpx; text-align: center;"> -->
+<view>
+  <!-- coming soon... -->
 
-<!-- <t-user-center-card
+
+<t-user-center-card
   userInfo="{{userInfo}}"
   isPhoneHide="{{true}}"
   name-class="custom-name-class"
@@ -48,4 +49,5 @@
     <view class="popup-close" bind:tap="closeMakePhone">取消</view>
   </view>
 </t-popup>
-<t-toast id="t-toast" /> -->
+<t-toast id="t-toast" />
+</view>
